fix(be): strip NUL bytes before persisting addax log
Why: PostgreSQL UTF8 text rejects 0x00 bytes; NUL chars smuggled in
from source data or a torn log file made the whole addax_log insert
fail occasionally with "invalid byte sequence for encoding UTF8: 0x00".

What:
- AddaxLogService.insertLog strips NUL (0x00) at the persistence boundary
- TaskQueueManagerV2Impl reads log file leniently (new String + UTF-8)
  instead of strict Files.readString, so a torn multibyte char at EOF
  no longer discards the entire log as null

Impact: log content may lose NUL chars (no display value); no schema
change, existing records unaffected.

Test: mvn package BUILD SUCCESS (JAVA_HOME=temurin-25)

Co-Authored-By: Claude <noreply@anthropic.com>